# sdl2-player

./: CMakeLists.txt  compile_gcc.sh  main.cpp  main_thread.c
